--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,15 +117,16 @@ configurations.all {
 
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation "androidx.core:core-ktx:1.7.0"
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation 'androidx.compose.material3:material3:1.0.0-alpha10'
+    implementation "androidx.compose.material3:material3:1.0.0-alpha11"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.1'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
+    implementation "androidx.activity:activity-compose:1.3.1"
+    implementation "androidx.fragment:fragment-ktx:1.3.0-alpha07"
+    testImplementation "junit:junit:4.13.2"
+    androidTestImplementation "androidx.test.ext:junit:1.1.3"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
@@ -138,12 +139,14 @@ dependencies {
     implementation "com.google.accompanist:accompanist-pager-indicators:0.21.2-beta"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.21.2-beta"
     implementation "com.google.accompanist:accompanist-swiperefresh:0.21.2-beta"
-    implementation 'com.google.android.exoplayer:exoplayer:2.18.1'
-    implementation 'com.google.android.exoplayer:extension-mediasession:2.18.1'
-    implementation 'androidx.palette:palette:1.0.0'
+    implementation "com.google.android.exoplayer:exoplayer:2.18.1"
+    implementation "com.google.android.exoplayer:extension-mediasession:2.18.1"
+    implementation "androidx.palette:palette:1.0.0"
     implementation "com.github.krottv:compose-sliders:0.1.4"
     implementation "org.burnoutcrew.composereorderable:reorderable:0.9.2"
     implementation "com.github.spectreseven1138:android-compose-furigana:custom-SNAPSHOT"
+
+    implementation "com.github.topjohnwu.libsu:core:5.0.3"
 }
 
 task preBuildScript(type: Exec) {
