--- a/app/build.gradle
+++ b/app/build.gradle
@@ -139,12 +139,14 @@ dependencies {
     implementation "com.google.accompanist:accompanist-pager-indicators:0.21.2-beta"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.21.2-beta"
     implementation "com.google.accompanist:accompanist-swiperefresh:0.21.2-beta"
-    implementation "com.google.android.exoplayer:exoplayer:2.18.1"
-    implementation "com.google.android.exoplayer:extension-mediasession:2.18.1"
     implementation "androidx.palette:palette:1.0.0"
     implementation "com.github.krottv:compose-sliders:0.1.4"
     implementation "org.burnoutcrew.composereorderable:reorderable:0.9.2"
     implementation "com.github.spectreseven1138:android-compose-furigana:custom-SNAPSHOT"
+
+    implementation project(":exoplayer-library-core")
+    implementation project(":exoplayer-library-ui")
+    implementation project(":exoplayer-extension-mediasession")
 }
 
 task preBuildScript(type: Exec) {
