--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'com.chaquo.python'
 }
 
 android {
@@ -37,17 +36,6 @@ android {
         ndk {
             abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
         }
-
-        python {
-            pip {
-                install "ytmusicapi"
-                install "-r", "../server/requirements.txt"
-            }
-            python {
-                version "3.10"
-            }
-        }
-
     }
 
     buildTypes {
@@ -110,7 +98,6 @@ android {
     sourceSets {
         main {
             assets.srcDirs = ["src/main/assets"]
-            python.srcDir "../server/"
         }
     }
 }
@@ -152,7 +139,7 @@ dependencies {
     implementation project(":exoplayer-library-ui")
     implementation project(":exoplayer-extension-mediasession")
 
-    implementation group: 'com.worksap.nlp', name: 'sudachi', version: '0.5.3'
+    implementation group: 'com.atilika.kuromoji', name: 'kuromoji-ipadic', version: '0.9.0'
 }
 
 task preBuildScript(type: Exec) {
