--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ android {
     buildTypes {
         debug {
             applicationIdSuffix = ".debug"
+            manifestPlaceholders = [appAuthRedirectScheme: 'com.spectre7.spmp.debug']
             manifestPlaceholders["appName"] = "SpMp (debug)"
             signingConfig signingConfigs.debug
         }
@@ -48,6 +49,7 @@ android {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            manifestPlaceholders = [appAuthRedirectScheme: 'com.spectre7.spmp']
             manifestPlaceholders["appName"] = "SpMp"
             signingConfig signingConfigs.debug
         }
@@ -123,6 +125,7 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.7.10"
+    implementation 'net.openid:appauth:0.11.1'
 
     implementation "io.coil-kt:coil-compose:2.0.0-rc01"
     implementation "com.beust:klaxon:5.5"
