Remove cookie credentials

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,10 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
+def keys_file = rootProject.file("keys.properties")
+def keys = new Properties()
+keys.load(new FileInputStream(keys_file))
+
 android {
     signingConfigs {
         debug {
@@ -36,6 +40,8 @@ android {
         ndk {
             abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
         }
+
+        buildConfigField("String", "TESTING_COOKIE", apikeyProperties["TESTING_COOKIE"])
     }
 
     buildTypes {
