Fix black screen on idle, complete remote work

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,10 @@ plugins {
 
 def keys_file = rootProject.file("keys.properties")
 def keys = new Properties()
-keys.load(new FileInputStream(keys_file))
+
+if (keys_file.exists()) {
+    keys.load(new FileInputStream(keys_file))
+}
 
 android {
     signingConfigs {
@@ -41,7 +44,7 @@ android {
             abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
         }
 
-        buildConfigField("String", "TESTING_COOKIE", apikeyProperties["TESTING_COOKIE"])
+        buildConfigField("String", "TESTING_COOKIE", keys["TESTING_COOKIE"] ?: "null")
     }
 
     buildTypes {
