--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,12 +26,12 @@ android {
         // }
     }
 
-    compileSdkVersion 32
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "com.spectre7.spmp"
         minSdk 31
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -146,6 +146,7 @@ dependencies {
     implementation "com.github.krottv:compose-sliders:0.1.4"
     implementation "org.burnoutcrew.composereorderable:reorderable:0.9.2"
     implementation "com.github.spectreseven1138:android-compose-furigana:custom-SNAPSHOT"
+    implementation "com.godaddy.android.colorpicker:compose-color-picker:0.7.0"
 
     implementation project(":exoplayer-library-core")
     implementation project(":exoplayer-library-ui")
