--- a/app/build.gradle
+++ b/app/build.gradle
@@ -145,10 +145,10 @@ dependencies {
     implementation "androidx.palette:palette:1.0.0"
     implementation "com.github.krottv:compose-sliders:0.1.4"
     implementation "org.burnoutcrew.composereorderable:reorderable:0.9.2"
-    implementation "com.github.spectreseven1138:android-compose-furigana:custom-SNAPSHOT"
+//    implementation "com.github.spectreseven1138:android-compose-furigana:custom-SNAPSHOT"
     implementation "com.godaddy.android.colorpicker:compose-color-picker:0.7.0"
     implementation "com.github.TeamNewPipe:NewPipeExtractor:v0.22.1"
-    implementation "com.github.dead8309:KizzyRPC:1.0.71"
+//    implementation "com.github.dead8309:KizzyRPC:1.0.71"
     implementation "org.apache.commons:commons-text:1.10.0"
 
     implementation group: "com.atilika.kuromoji", name: "kuromoji-ipadic", version: "0.9.0"
