--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,4 @@ android.useAndroidX=true
 kotlin.code.style=official
 android.nonTransitiveRClass=true
 android.enableR8.fullMode=true
+org.gradle.java.home=/usr/lib/jvm/java-11-openjdk/
