Add item pinning, minor platform fixes

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 android.enableR8.fullMode=true
 org.gradle.java.home=/usr/lib/jvm/java-11-openjdk/
+kotlin.mpp.enableCInteropCommonization=true
 
 # Android
 android.useAndroidX=true
