Cont Discord, artist page, and prefs, add URL open
Use multiple custom image Discord channels for indexing
Add preferences options for the PlayerView top bar and filters #7
Move MediaItem data supplying functionality into separate classes which save by default after edit
Support opening YouTube and YouTube Music URLs (only /watch and /channel implemented currently)
Continue artist page redesign

--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -3,13 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.spectre7.spmp">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
-    <uses-permission android:name="android.permission.VIBRATE"/>
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-    <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS"
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission
+        android:name="android.permission.WRITE_SECURE_SETTINGS"
         tools:ignore="ProtectedPermissions" />
-    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"
+    <uses-permission
+        android:name="android.permission.QUERY_ALL_PACKAGES"
         tools:ignore="QueryAllPackagesPermission" />
 
     <application
@@ -30,11 +32,24 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:host="music.youtube.com" android:pathPrefix="/" android:scheme="https" />
+            </intent-filter>
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:host="www.youtube.com" android:pathPrefix="/" android:scheme="https" />
+            </intent-filter>
         </activity>
 
         <activity android:name=".ErrorReportActivity" />
 
-        <service android:name=".PlayerService"
+        <service
+            android:name=".PlayerService"
             android:exported="true"
             android:foregroundServiceType="mediaPlayback">
             <intent-filter>
@@ -42,7 +57,10 @@
             </intent-filter>
         </service>
 
-        <service android:label="TODO" android:name=".PlayerAccessibilityService" android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
+        <service
+            android:label="TODO"
+            android:name=".PlayerAccessibilityService"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
@@ -52,11 +70,12 @@
                 android:resource="@xml/accessibility_service" />
         </service>
 
-        <service android:name=".PlayerDownloadService"
-            android:exported="false">
-        </service>
+        <service
+            android:name=".PlayerDownloadService"
+            android:exported="false"></service>
 
-        <receiver android:name="androidx.media.session.MediaButtonReceiver"
+        <receiver
+            android:name="androidx.media.session.MediaButtonReceiver"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
