Refactor MediaPlayerService, fix recent bugs
Add like button to notification
Reenable ErrorReportActivity
Remove LongPressMenu icon animation

Clean and organise MediaPlayerService code
Move song like_status and lyrics logic into separate class
Move MediaItem subclasses into separate files

Fix unclosed response in setSongLiked
Fix lyrics search and reloading
Fix DynamicProvider thumbnail loading, and complete MediaItemThumbnailLoader implementation (closes #50)
Fix error icon being incorrectly displayed by MediaItem.Thumbnail

--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
-        android:extractNativeLibs="true">
+        android:extractNativeLibs="true"
+        android:enableOnBackInvokedCallback="true">
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -49,7 +50,7 @@
         <activity android:name=".ErrorReportActivity" />
 
         <service
-            android:name=".platform.ActualMediaPlayerService"
+            android:name=".platform.MediaPlayerServiceSession"
             android:exported="true"
             android:foregroundServiceType="mediaPlayback">
             <intent-filter>
