--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -15,13 +15,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        submodules: recursive
+    
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
         java-version: '11'
         distribution: 'temurin'
         cache: gradle
-
+    
     - name: Create and populate keys.properties
       run: |
         touch keys.properties
