--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,13 +17,13 @@ jobs:
     - uses: actions/checkout@v3
       with:
         submodules: recursive
-    
+
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
         java-version: '11'
         distribution: 'temurin'
-    
+
     - name: Create and populate keys.properties
       run: |
         touch keys.properties
@@ -32,11 +32,11 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
-    - name: Build debug APK
-      run: ./gradlew packageDebug
+    - name: Build release APK
+      run: ./gradlew packageRelease
 
-    - name: Upload debug APK artifact
+    - name: Upload release APK artifact
       uses: actions/upload-artifact@v3
       with:
-        name: androidApp-debug.apk
-        path: androidApp/build/outputs/apk/debug/androidApp-debug.apk
+        name: androidApp-release.apk
+        path: androidApp/build/outputs/apk/release/androidApp-release.apk
