Show feed load error, improve ErrorInfoDisplay
When getHomeFeed fails to parse the feed JSON, repeat the feed request and include its content in the returned result
Display feed load error in UI
Add JSON data display to ErrorInfoDisplay
Add Paste.ee upload button to ErrorInfoDisplay
Block main NowPlaying scrolling from the overlay menu
Respect OverlayMenu.closeOnTap
Improve ErrorReportActivity layout

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,25 @@
-org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8
-kotlin.code.style=official
-android.nonTransitiveRClass=true
-android.enableR8.fullMode=true
-kotlin.mpp.enableCInteropCommonization=true
-
-# Android
-android.useAndroidX=true
-android.compileSdk=33
-android.targetSdk=33
-android.minSdk=27
-
-# Versions
-kotlin.version=1.8.20
+## For more details on how to configure your build environment visit
+# http://www.gradle.org/docs/current/userguide/build_environment.html
+#
+# Specifies the JVM arguments used for the daemon process.
+# The setting is particularly useful for tweaking memory settings.
+# Default value: -Xmx1024m -XX:MaxPermSize=256m
+# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#
+# When configured, Gradle will run in incubating parallel mode.
+# This option should only be used with decoupled projects. More details, visit
+# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
+# org.gradle.parallel=true
+#Wed Jul 12 23:12:00 BST 2023
 agp.version=7.4.2
+android.compileSdk=33
+android.enableR8.fullMode=true
+android.minSdk=27
+android.nonTransitiveRClass=true
+android.targetSdk=33
+android.useAndroidX=true
 compose.version=1.4.1
+kotlin.code.style=official
+kotlin.mpp.enableCInteropCommonization=true
+kotlin.version=1.8.20
+org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M" -Dfile.encoding\=UTF-8
