Fix download service, continue library
Handle cancellation of player service connection
Add max retry count to download service
Add notification permission request for A13+ to download service
Continue library page redesign
Add songs page to library

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,16 +10,16 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Wed Jul 12 23:12:00 BST 2023
-agp.version=7.4.2
-android.compileSdk=33
-android.enableR8.fullMode=true
-android.minSdk=27
+#Thu Aug 17 20:16:49 BST 2023
 android.nonTransitiveRClass=true
-android.targetSdk=33
-android.useAndroidX=true
 compose.version=1.4.1
-kotlin.code.style=official
-kotlin.mpp.enableCInteropCommonization=true
 kotlin.version=1.8.20
-org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M" -Dfile.encoding\=UTF-8
+android.minSdk=27
+org.gradle.jvmargs=-Xmx1536M -Dkotlin.daemon.jvm.options\="-Xmx1536M"
+android.useAndroidX=true
+android.targetSdk=33
+kotlin.code.style=official
+android.compileSdk=33
+kotlin.mpp.enableCInteropCommonization=true
+agp.version=7.4.2
+android.enableR8.fullMode=true
