Player size and search bar positioning fixes
Fix search bar vertical offset
Swap radio builder button and settings button positions
Resize player based on keyboard height
Allow player image to shrink if controls require more space

--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         android:enableOnBackInvokedCallback="true">
         <activity
             android:name=".MainActivity"
+            android:windowSoftInputMode="adjustResize"
             android:exported="true"
             android:theme="@style/Theme.MyApplication">
             <intent-filter>
