--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -55,7 +55,7 @@
         <activity android:name=".ErrorReportActivity" />
 
         <service
-            android:name=".platform.MediaPlayerServiceSession"
+            android:name=".platform.PlayerService"
             android:exported="true"
             android:foregroundServiceType="mediaPlayback">
             <intent-filter>
