--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -66,7 +66,7 @@
         </service>
 
         <service
-            android:name=".PlayerDownloadService"
+            android:name=".platform.download.PlayerDownloadService"
             android:exported="false"></service>
 
         <receiver
