--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -40,5 +40,5 @@ jobs:
     - name: Upload AppImage artifact
       uses: actions/upload-artifact@v3
       with:
-        name: desktopApp-release.appimage
+        name: spmp-linux-release.zip
         path: desktopApp/build/*.appimage
