--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -35,10 +35,10 @@ jobs:
       run: chmod +x /usr/local/bin/appimagetool
 
     - name: Build AppImage
-      run: ./gradlew desktopApp:actuallyPackageAppImage
+      run: ./gradlew desktopApp:packageReleaseAppImageWithServer
 
     - name: Upload AppImage artifact
       uses: actions/upload-artifact@v3
       with:
         name: spmp-linux-release.zip
-        path: desktopApp/build/*.appimage
+        path: desktopApp/build/compose/binaries/main-release/appimage/*.appimage
