--- a/server.properties
+++ b/server.properties
@@ -1,2 +1,2 @@
-SPMS_TARGET_URL_LINUX="https://github.com/toasterofbread/spmp-server/releases/download/release-test/spmp-server-linux.kexe"
-SPMS_TARGET_URL_WINDOWS="https://github.com/toasterofbread/spmp-server/releases/download/release-test/spmp-server-windows.exe"
+SPMS_TARGET_URL_LINUX=https://github.com/toasterofbread/spmp-server/releases/download/release-test/spmp-server-linux.kexe
+SPMS_TARGET_URL_WINDOWS=https://github.com/toasterofbread/spmp-server/releases/download/release-test/spmp-server-windows.exe
