--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -23,10 +23,10 @@ jobs:
         distribution: 'temurin'
 
     - name: Build exe
-      run: .\gradlew.bat desktopApp:packageReleaseExe
+      run: .\gradlew.bat desktopApp:packageReleaseExeWithServer
 
     - name: Upload exe artifact
       uses: actions/upload-artifact@v3
       with:
-        name: desktopApp-release.exe
+        name: spmp-windows-release.zip
         path: desktopApp/build/compose/binaries/main-release/exe/*.exe
