Update server api for player communication (#227)

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -23,10 +23,10 @@ jobs:
         distribution: 'temurin'
 
     - name: Build exe
-      run: .\gradlew.bat desktopApp:packageReleaseExeWithServer
+      run: .\gradlew.bat desktopApp:packageReleaseExe
 
     - name: Upload exe artifact
       uses: actions/upload-artifact@v3
       with:
-        name: spmp-windows-release.zip
+        name: spmp-windows-release
         path: desktopApp/build/compose/binaries/main-release/exe/*.exe
