--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -35,10 +35,10 @@ jobs:
       run: chmod +x /usr/local/bin/appimagetool
 
     - name: Build AppImage
-      run: ./gradlew desktopApp:packageReleaseAppImageWithServer
+      run: ./gradlew desktopApp:packageReleaseAppImage
 
     - name: Upload AppImage artifact
       uses: actions/upload-artifact@v3
       with:
-        name: spmp-linux-release.zip
+        name: spmp-linux-release
         path: desktopApp/build/compose/binaries/main-release/appimage/*.appimage
