Add shared SpMs code as submodule, improve init speed
Add spmp-server as a submodule. The spms.socketapi.shared package is included in SpMp builds and contains shared code used by both ends.
Drastically improve desktop init speed and reliability when the server already has a (long) playback queue

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ToasterComposeTools"]
 	path = ComposeKit
 	url = https://github.com/toasterofbread/ToasterComposeTools
+[submodule "spmp-server"]
+	path = spmp-server
+	url = https://github.com/toasterofbread/spmp-server
