--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -22,6 +22,9 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
+    - name: Set up Gradle
+      uses: gradle/gradle-build-action@v3
+
     - name: Build exe
       run: .\gradlew.bat desktopApp:packageReleaseExe
 
