--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -22,6 +22,9 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
+    - name: Set up Gradle
+      uses: gradle/gradle-build-action@v3
+
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
