Add basic server connectivity to Android
Add ENABLE_EXTERNAL_SERVER_MODE option
Implement external server connectivity on Android
Rename DesktopSettings to ServerSettings
Move desktop startup command to system category
Various refactors and organisation changes to PlayerService-related files

--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -57,7 +57,17 @@
         <activity android:name=".ErrorReportActivity" />
 
         <service
-            android:name=".platform.playerservice.PlatformPlayerService"
+            android:name=".platform.playerservice.PlatformInternalPlayerService"
+            android:exported="true"
+            android:foregroundServiceType="mediaPlayback">
+            <intent-filter>
+                <action android:name="android.intent.action.MEDIA_BUTTON" />
+                <action android:name="androidx.media3.session.MediaSessionService" />
+            </intent-filter>
+        </service>
+
+        <service
+            android:name=".platform.playerservice.PlatformExternalPlayerService"
             android:exported="true"
             android:foregroundServiceType="mediaPlayback">
             <intent-filter>
