Package desktop server using local build instead of remote URL

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ org.gradle.jvmargs=-Xmx1536M -Dkotlin.daemon.jvm.options\="-Xmx1536M"
 # Kotlin
 kotlin.code.style=official
 kotlin.mpp.enableCInteropCommonization=true
+kotlin.mpp.enableCInteropCommonization.nowarn=true
 
 # Android
 android.useAndroidX=true
