Add player toggle shortcut, multiple download fixes
Add shortcut to toggle player expansion with tab
Improve error messages and possibly fix Piped API
Fix crash on downloading to custom location on Android

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ app/release/
 debug_keys.properties
 androidApp/keystore.properties
 androidApp/main.keystore
+shared/src/commonMain/kotlin/test.kt
