--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -44,3 +44,12 @@ jobs:
       with:
         name: spmp-android-release
         path: androidApp/build/outputs/apk/release/*.apk
+
+    - name: Get short commit hash
+      run: echo "COMMIT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+
+    - name: Send completion notification to Discord webhook
+      uses: discord-actions/message@v2
+      with:
+        webhookUrl: ${{ secrets.BUILD_NOTIFICATION_DISCORD_WEBHOOK }}
+        message: "${{ github.workflow }} [build](<${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}>) completed for commit - [${{ env.COMMIT_SHA }}](<${{ github.event.head_commit.url }}>) ${{ github.event.head_commit.message }} - [Downloads](https://nightly.link/${{ github.repository }}/actions/runs/${{ github.run_id }})"
