Begin modularising build system
Use buildSrc project structure
Move ProjectBuildConfig generation into its own file
Rename database package

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ local.properties
 app/debug/
 app/release/
 
-debug_keys.properties
+buildSrc/project_debug.properties
 androidApp/keystore.properties
 androidApp/main.keystore
 shared/src/commonMain/kotlin/test.kt
