Continue layout customisation, begin shortcuts

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ local.properties
 app/debug/
 app/release/
 
+buildSrc/project_debug.properties
 debug_keys.properties
 androidApp/keystore.properties
 androidApp/main.keystore
