Update ytm-kt to cb25bf37be

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,5 +21,5 @@ agp.version=8.1.0
 compose.version=1.5.12
 
 # Dependency versions
-ytmkt.version=v0.1.0
+ytmkt.version=cb25bf37be
 ktor.version=2.3.9
