--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ local.properties
 app/debug/
 app/release/
 
+desktopApp/MediaDeviceSalts*
+
 buildSrc/project_debug.properties
 debug_keys.properties
 androidApp/keystore.properties
