Use Kotlin 2.0.0-RC1

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,12 +16,12 @@ android.enableR8.fullMode=true
 android.suppressUnsupportedCompileSdk=34
 
 # Plugin versions
-kotlin.version=1.9.23
-agp.version=8.1.0
-compose.version=1.6.1
+kotlin.version=2.0.0-RC1
+agp.version=8.2.2
+compose.version=1.6.2
 
 # Dependency versions
-composekit.version=b94fcfdb13
+composekit.version=406b7057ca
 ytmkt.version=eff5fccf88
 mediasessionkt.version=0.0.1
 ktor.version=2.3.9
