--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -50,6 +50,9 @@ jobs:
 
     - name: Send completion notification to Discord webhook
       uses: discord-actions/message@v2
+      env:
+        BUILD_NOTIFICATION_DISCORD_WEBHOOK: ${{ secrets.BUILD_NOTIFICATION_DISCORD_WEBHOOK }}
+      if: env.BUILD_NOTIFICATION_DISCORD_WEBHOOK != null
       with:
         webhookUrl: ${{ secrets.BUILD_NOTIFICATION_DISCORD_WEBHOOK }}
         message: "${{ github.workflow }} [build](<${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}>) completed for commit - [${{ env.COMMIT_SHA }}](<${{ github.event.head_commit.url }}>) ${{ github.event.head_commit.message }} - [Downloads](https://nightly.link/${{ github.repository }}/actions/runs/${{ github.run_id }})"
