Add in-app dependency list

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,9 +19,4 @@ android.suppressUnsupportedCompileSdk=34
 kotlin.version=2.0.0-RC1
 agp.version=8.2.2
 compose.version=1.6.2
-
-# Dependency versions
-composekit.version=136f216e65
-ytmkt.version=faa7e5257a
-mediasessionkt.version=0.0.1
-ktor.version=2.3.9
+sqldelight.version = 2.0.0
