--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-    if: "github.event_name == 'workflow_dispatch' || !contains(github.event.head_commit.message, 'noci')"
+    if: ${{ github.event_name == 'workflow_dispatch' || !contains(github.event.head_commit.message, 'noci') }}
 
     steps:
     - uses: actions/checkout@v3
