--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,6 @@ kotlin.version=2.0.0-RC1
 agp.version=8.2.2
 compose.version=1.6.2
 sqldelight.version = 2.0.0
+
+# Nix
+org.gradle.java.installations.fromEnv=JAVA_21_HOME,JAVA_22_HOME
